# streampipe

./: .gitignore  README.md  StreamPipe.md  build_windows.bat  buildozer.spec  pyproject.toml  requirements-gui.txt
.github/workflows/: build_apk.yml
gui/: __init__.py  core_bridge.py  windows_app.py
mobile/: __init__.py  main.py
streampipe/: cli.py  config.py  utils.py
streampipe/core/: __init__.py  downloader.py  extractor.py  postprocess.py  quality.py
streampipe/ui/: __init__.py  dashboard.py
