[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streampipe"
version = "0.1.0"
description = "Advanced Terminal-Based YouTube Downloader"
authors = [
    { name = "StreamPipe Contributors" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2026.06.09",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0"
]

[project.scripts]
streampipe = "streampipe.cli:main"
